[project]
name = "backrun-sdk"
version = "0.1.3"
description = "The official Backrun Python SDK"
dynamic = ["readme"]
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
  { name = "Backrun", email = "support@backrun.io" },
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "httpx[http2]>=0.27",
    "orjson>=3.10.7",
]

[project.urls]
Homepage = "https://backrun.io"

[build-system]
requires = ["hatchling", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backrun_sdk"]

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.uv]
dev-dependencies = []
